[package]
name = "srs-pallet-slip"
version = "0.1.0"
authors = ["Sunrise Protocol"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
srs-staking-pool = { package = "srs-pallet-staking-pool", path = "../staking_pool", default-features = false }
srs-pallet_support = { package = "srs-pallet-support", path = "../support", default-features = false }
srs-primitives = { package = "srs-primitives", path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"srs-staking-pool/std",
	"srs-pallet_support/std",
	"srs-primitives/std",
]
