[package]
name = "srs-pallet-slip"
version = "0.1.0"
authors = ["Sunrise Protocol"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
srs-pallet-staking-pool = { package = "srs-pallet-staking-pool", path = "../staking-pool", default-features = false }
srs-pallet-support = { package = "srs-pallet-support", path = "../support", default-features = false }
srs-primitives = { package = "srs-primitives", path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"srs-pallet-staking-pool/std",
	"srs-pallet-support/std",
	"srs-primitives/std",
]
