[package]
name = "pallet-srstokens"
version = "0.1.0"
authors = ["Sunrise"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
#serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-runtime = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = {  version = "2.0.0", default-features = false }
primitives = { package = "srs-primitives", path = "../../primitives", default-features = false }
pallet-evm = { version = "2.0.0" , default-features = false }


[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0'}

[features]
default = ["std"]
std =[
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
]
