[package]
name = "pallet-support"
version = "0.1.0"
authors = ["Sunrise Protocol"]
edition = "2018"

[dependencies]
impl-trait-for-tuples = "0.1.3"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
primitives = { package = "sunrise-primitives", path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"sp-core/std",
	"frame-support/std",
	"sp-std/std",
	"primitives/std",
	"orml-traits/std",
]
