[package]
name = "pallet-tokens"
version = "0.1.0"
authors = ["Sunrise"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
#serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "2.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "2.0.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "2.0.0", default-features = false }
frame-system = {  git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "2.0.0", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false, version = '2.0.0' }

[features]
default = ["std"]
std =[
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",

]
