[package]
name = "pallet-tokens"
version = "0.1.0"
authors = ["Sunrise"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
#serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
frame-system = {  git = "https://github.com/paritytech/substrate.git", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
primitives = { package = "sunrise-primitives", path = "../../primitives", version = "0.1.0", default-features=false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-io = { git = "https://github.com/paritytech/substrate.git", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }

[features]
default = ["std"]
std =[
	"codec/std",
	"serde",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",

]
