[package]
name = "srs-pallet-transaction-payment"
version = "0.1.0"
authors = ["Sunrise Protocol"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io= { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-tokens = { path = "../../orml/tokens", default-features = false }
srs-pallet-currencies = { path = "../../pallets/currencies", default-features = false }
srs-primitives = { package = "srs-primitives", path = "../../primitives", default-features = false }
srs-pallet-support = { package = "srs-pallet-support", path = "../support", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
srs-pallet-dex = { path = "../dex", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
srs-pallet-staking-pool = { path = "../staking_pool" }
smallvec = "1.4.1"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-proxy/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"sp-io/std",
	"sp-std/std",
	"orml-tokens/std",
	"orml-traits/std",
	"srs-pallet-currencies/std",
	"srs-primitives/std",
	"srs-pallet-support/std",
	"srs-pallet-dex/std",
]
