[package]
name = "runtime-common"
version = "0.1.0"
authors = ["Sunrise Protocol"]
edition = "2018"

[dependencies]
static_assertions = "1.1.0"

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
pallet-scheduler  = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
pallet-evm = { path = "../../pallets/evm", default-features = false }

orml-traits = { path = "../../orml/traits", default-features = false }

pallet-support = { path = "../../pallets/support", default-features = false }
primitives = { package = "sunrise-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
serde_json = "1.0.41"
hex-literal = { version = "0.3.1" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
pallet-proxy = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
orml-tokens = { path = "../../orml/tokens" }
pallet-currencies = { path = "../../pallets/currencies" }
pallet-evm-bridge = { path = "../../pallets/evm-bridge" }
pallet-exchange = { path = '../../pallets/exchange'}
pallet-tokens = { path = '../../pallets/tokens'}

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-scheduler/std",
	"pallet-evm/std",
	"orml-traits/std",
	"pallet-support/std",
	"primitives/std",
]
with-ethereum-compatibility = []
