[package]
name = "srs-runtime-common"
version = "0.1.0"
authors = ["Sunrise Protocol"]
edition = "2018"

[dependencies]
static_assertions = "1.1.0"

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-scheduler  = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

orml-oracle = { path = "../../orml/oracle", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }

srs-pallet-evm = { path = "../../pallets/evm", default-features = false }
srs-pallet-support = { path = "../../pallets/support", default-features = false }
srs-primitives = { package = "srs-primitives", path = "../../primitives", default-features = false }
srs-pallet-transaction-payment = { path = "../../pallets/transaction_payment", default-features = false }
srs-pallet-staking-pool = { path = "../../pallets/staking_pool", default-features = false }


[dev-dependencies]
serde_json = "1.0.41"
hex-literal = { version = "0.3.1" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-tokens = { path = "../../orml/tokens" }
srs-pallet-currencies = { path = "../../pallets/currencies" }
srs-pallet-dex = { path = '../../pallets/dex'}
srs-pallet-evm-bridge = { path = "../../pallets/evm-bridge" }
srs-pallet-exchange = { path = '../../pallets/exchange'}
srs-pallet-nft = { path = '../../pallets/nft'}
srs-pallet-tokens = { path = '../../pallets/tokens'}

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-scheduler/std",
	"orml-oracle/std",
	"orml-traits/std",
	"srs-pallet-evm/std",
	"srs-pallet-staking-pool/std",
	"srs-pallet-transaction-payment/std",
	"srs-pallet-support/std",
	"srs-primitives/std",
]
with-ethereum-compatibility = []
