[package]
authors = ['Sunrise Protocol']
edition = '2018'
homepage = 'https://sunriseprotocol.com'
license = 'Apache 2.0'
name = 'dawn-runtime'
repository = 'https://github.com/sunriseprotocol/sunrise'
version = '0.1.0'
build = "build.rs"

## [package.metadata.docs.rs]
## targets = ['x86_64-unknown-linux-gnu']

[dependencies]
smallvec = "1.4.0"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, default-features = false }
### serde = { version = "1.0.101", optional = true, features = ["derive"] }
serde_json = "1.0.60"
hex = { version = "0.4", default-features = false, optional = true }
hex-literal = { version = "0.3.1" }
evm = { version = "0.24.0", optional = true, default-features = false }

# Substrate dependencises
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }

pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }

sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate",  default-features = false, rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }

libsecp256k1 = { version = "0.3.4", default-features = false, optional = true }

# Cumulus dependencies
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", rev ="fad35c28b1f73aaeb25dedb46674b48774c092b4", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", rev ="fad35c28b1f73aaeb25dedb46674b48774c092b4", default-features = false }
cumulus-pallet-xcm-handler = { git = "https://github.com/paritytech/cumulus", rev ="fad35c28b1f73aaeb25dedb46674b48774c092b4", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", rev ="fad35c28b1f73aaeb25dedb46674b48774c092b4", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false , rev = "9bc8915acd5507a77737371fdd892bb1f6a8db22" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false , rev = "9bc8915acd5507a77737371fdd892bb1f6a8db22" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false , rev = "9bc8915acd5507a77737371fdd892bb1f6a8db22" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false , rev = "9bc8915acd5507a77737371fdd892bb1f6a8db22" }


#orml
orml-benchmarking = { path = "../../orml/benchmarking", default-features = false, optional = true }
orml-tokens = { path = "../../orml/tokens", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
# orml-xcm-support = { path = "../../orml/xcm-support", default-features = false }

# local dependencies
primitives = { package = "sunrise-primitives", path = "../../primitives", default-features = false }
runtime-common = { path = "../common", default-features = false }
pallet-currencies = { path = '../../pallets/currencies', default-features = false }
pallet-evm = { path = "../../pallets/evm", default-features = false }
pallet-evm-rpc-runtime-api = { path = "../../pallets/evm/rpc/runtime_api", default-features = false }
pallet-evm-accounts = { path = "../../pallets/evm-accounts", default-features = false }
pallet-evm-bridge = { path = "../../pallets/evm-bridge", default-features = false }
pallet-exchange = { path = '../../pallets/exchange', default-features = false }
exchange-rpc-runtime-api = { path = '../../pallets/exchange/rpc/runtime-api', default-features = false}
pallet-support = { path = '../../pallets/support', default-features = false }
pallet-tokens = { path = '../../pallets/tokens', default-features = false }
pallet-template = { path = '../../pallets/template', default-features = false }

[build-dependencies]
substrate-wasm-builder = "3.0.0"

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
libsecp256k1 = { version = "0.3.4" }
hex = "0.4.0"

[features]
default = [ "std" ]
no_std = []
std = [
	"codec/std",
	"serde",
	"hex/std",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-benchmarking/std",

	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",

  	"sp-io/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
 	"sp-core/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
 	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",

 	"cumulus-pallet-parachain-system/std",
 	"cumulus-primitives-core/std",
 	"cumulus-pallet-xcm-handler/std",

 	"parachain-info/std",
 	"polkadot-parachain/std",

 	"xcm/std",
 	"xcm-executor/std",
 	"xcm-builder/std",

 	"orml-tokens/std",
	"orml-traits/std",
#	"orml-xcm-support/std",

 	"pallet-currencies/std",
  	"pallet-evm/std",
  	"pallet-evm-accounts/std",
  	"pallet-evm-rpc-runtime-api/std",
  	"pallet-evm-bridge/std",
 	"pallet-exchange/std",
 	"exchange-rpc-runtime-api/std",
 	"pallet-support/std",
 	"pallet-template/std",
 	"pallet-tokens/std",
	
 	"primitives/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
 	"orml-benchmarking",

	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

# When enabled, the runtime api will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime api exported functions
# in WASM.
disable-runtime-api = []
with-ethereum-compatibility = [
	"evm",
 	"pallet-evm/with-ethereum-compatibility",
 	"runtime-common/with-ethereum-compatibility",
]
standalone = [] 
