[package]
authors = ['Sunrise Protocol']
edition = '2018'
homepage = 'https://sunriseprotocol.com'
license = 'Apache 2.0'
name = 'dawn-runtime'
repository = 'https://github.com/sunriseprotocol/sunrise'
version = '0.1.0'
build = "build.rs"

## [package.metadata.docs.rs]
## targets = ['x86_64-unknown-linux-gnu']

[dependencies]
smallvec = "1.4.0"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, default-features = false }
### serde = { version = "1.0.101", optional = true, features = ["derive"] }
serde_json = "1.0.60"
hex = { version = "0.4", default-features = false, optional = true }
hex-literal = { version = "0.3.1" }
evm = { version = "0.24.0", optional = true, default-features = false }

# Substrate dependencises
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate",  default-features = false, branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

libsecp256k1 = { version = "0.3.4", default-features = false, optional = true }

# Cumulus dependencies
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
cumulus-pallet-xcm-handler = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }


#orml
orml-benchmarking = { path = "../../orml/benchmarking", default-features = false, optional = true }
orml-tokens = { path = "../../orml/tokens", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
orml-xcm-support = { path = "../../orml/xcm-support", default-features = false }
orml-xtokens = { path = "../../orml/xtokens", default-features = false }

# local dependencies
srs-primitives = { package = "srs-primitives", path = "../../primitives", default-features = false }
srs-runtime-common = { path = "../common", default-features = false }
srs-pallet-airdrop = { path = '../../pallets/airdrop', default-features = false }
srs-pallet-currencies = { path = '../../pallets/currencies', default-features = false }
srs-pallet-dex = { path = '../../pallets/dex', default-features = false }
srs-pallet-evm = { path = "../../pallets/evm", default-features = false }
srs-pallet-evm-rpc-runtime-api = { path = "../../pallets/evm/rpc/runtime_api", default-features = false }
srs-pallet-evm-accounts = { path = "../../pallets/evm-accounts", default-features = false }
srs-pallet-evm-bridge = { path = "../../pallets/evm-bridge", default-features = false }
srs-pallet-exchange = { path = '../../pallets/exchange', default-features = false }
srs-pallet-exchange-rpc-runtime-api = { path = '../../pallets/exchange/rpc/runtime-api', default-features = false}
srs-pallet-nft = { path = '../../pallets/nft', default-features = false }
srs-pallet-nominees-election = { path = '../../pallets/nominees_election', default-features = false }
srs-pallet-polkadot-bridge = { path = '../../pallets/polkadot_bridge', default-features = false }
srs-pallet-prices = { path = '../../pallets/prices', default-features = false }
srs-pallet-staking-pool = { path = '../../pallets/staking_pool', default-features = false }
srs-pallet-staking-pool-rpc-runtime-api = { path = '../../pallets/staking_pool/rpc/runtime-api', default-features = false }
srs-pallet-support = { path = '../../pallets/support', default-features = false }
srs-pallet-template = { path = '../../pallets/template', default-features = false }
srs-pallet-tokens = { path = '../../pallets/tokens', default-features = false }
srs-pallet-transaction-payment = { path = '../../pallets/transaction_payment', default-features = false }

[build-dependencies]
substrate-wasm-builder = "3.0.0"

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
libsecp256k1 = { version = "0.3.4" }
hex = "0.4.0"

[features]
default = [ "std" ]
no_std = []
std = [
	"codec/std",
	"serde",
	"hex/std",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-benchmarking/std",

	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-balances/std",
	"pallet-multisig/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",

  	"sp-io/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
 	"sp-core/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
 	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",

 	"cumulus-pallet-parachain-system/std",
 	"cumulus-primitives-core/std",
 	"cumulus-pallet-xcm-handler/std",

 	"parachain-info/std",
 	"polkadot-parachain/std",

 	"xcm/std",
 	"xcm-executor/std",
 	"xcm-builder/std",

 	"orml-tokens/std",
	"orml-traits/std",
	"orml-xcm-support/std",
	"orml-xtokens/std",

 	"srs-pallet-airdrop/std",
 	"srs-pallet-currencies/std",
 	"srs-pallet-dex/std",
  	"srs-pallet-evm/std",
  	"srs-pallet-evm-rpc-runtime-api/std",
  	"srs-pallet-evm-accounts/std",
  	"srs-pallet-evm-bridge/std",
 	"srs-pallet-exchange/std",
 	"srs-pallet-exchange-rpc-runtime-api/std",
 	"srs-pallet-nft/std",
 	"srs-pallet-nominees-election/std",
 	"srs-pallet-polkadot-bridge/std",
 	"srs-pallet-staking-pool/std",
 	"srs-pallet-staking-pool-rpc-runtime-api/std",
 	"srs-pallet-support/std",
 	"srs-pallet-template/std",
 	"srs-pallet-tokens/std",
 	"srs-pallet-transaction-payment/std",
	
 	"srs-primitives/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
 	"orml-benchmarking",

	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

# When enabled, the runtime api will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime api exported functions
# in WASM.
disable-runtime-api = []
with-ethereum-compatibility = [
	"evm",
 	"srs-pallet-evm/with-ethereum-compatibility",
 	"srs-runtime-common/with-ethereum-compatibility",
]
standalone = [] 